# supplementary-material

./: Cargo.toml  README.md
simulation/src/common/: compat.rs  db.rs
simulation/src/dep-graph/: main.rs
simulation/src/evm-trace-extract/: main.rs  occ.rs
simulation/src/rpc-to-disk/: main.rs
src/common/: lib.rs  rpc.rs  transaction_info.rs
src/evm-trace-extract/: depgraph.rs
